earmark-runtime-tools/check_out.txt
warning: function `validate_lower_digits_ext` is never used
   --> earmark-core/src/ids.rs:128:4
    |
128 | fn validate_lower_digits_ext(body: &str, extra: &str, max: usize) -> R...
    |    ^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: `earmark-core` (lib) generated 1 warning
    Checking earmark-runtime-tools v0.1.0 (/home/mikhails/from_ubuntu/GITHUB/earmark-workspace/earmark-runtime-tools)
error[E0596]: cannot borrow `*self.index` as mutable, as it is behind a `&` reference
   --> earmark-runtime-tools/src/modules/deposit.rs:232:62
    |
232 | ..._and_index(self.store, self.index, &object)?;
    |                           ^^^^^^^^^^ `self` is a `&` reference, so it cannot be borrowed as mutable
    |
help: consider changing this to be a mutable reference
    |
 41 |         &mut self,
    |          +++

For more information about this error, try `rustc --explain E0596`.
error: could not compile `earmark-runtime-tools` (lib) due to 1 previous error
